fix: available package version not showing in package install form (#124)
fix: location and order of buttons in install snaps form

--- a/src/features/snaps/components/AvailableSnapDetails/AvailableSnapDetails.module.scss
+++ b/src/features/snaps/components/AvailableSnapDetails/AvailableSnapDetails.module.scss
@@ -8,6 +8,8 @@
 
 .toBeConfirmedCard__buttons {
   border-top: 1px solid $colors--light-theme--border-default;
+  display: flex;
+  justify-content: flex-end;
   padding-top: $spv--medium;
 }
 
